--- a/index.html
+++ b/index.html
@@ -1,11 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty salon</title>
+    <title lang="en">Beauty salon</title>
   </head>
   <body>
-    1234! hello 1234!123
+    <header>
+      <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
+      <nav>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="#"></a>
+          <!--logo telehpon-->
+        </li>
+        <li>
+          <a href="#"></a>
+          <!--logo facebook-->
+        </li>
+        <li>
+          <a href="#"></a>
+          <!--logo instagram-->
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <p>Косметологічна клініка</p>
+        <h1>
+          <p>Beauty</p>
+          <p>zone</p>
+        </h1>
+        <button>Замовити дзвінок</button>
+        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+      </section>
+      <section>
+        <h2>Перевтілюйтесь в <span lang="en">Beauty zone!</span></h2>
+        <p>
+          Наша косметологічна клініка пропонує вам професійні послуги з догляду
+          за шкірою обличчя та тіла.
+        </p>
+        <p>
+          B <span lang="en">beauty zone</span> ми гарантуємо найвищі стандарти
+          якості та приємний сервіс. Наші косметологічні процедури та препарати
+          допоможуть вам підтримувати свою красу та молодість. З нами краса
+          назавжди!
+        </p>
+      </section>
+      <section>
+        <h2>Чому люди <span>обирають нас</span></h2>
+        <ul>
+          <li>
+            <p>
+              Всі наші косметологи мають вищу медичну освіту та стаж роботи від
+              5 років
+            </p>
+          </li>
+          <li>
+            <p>
+              Використовуємо тільки професійне обладнання та косметику,
+              перевірену часом
+            </p>
+          </li>
+          <li>
+            <p>
+              Наша мета - підкреслити переваги та приховати недоліки, а не
+              переробити
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наші процедури</h2>
+        <ul>
+          <li>
+            <img src="./images/image-1.jpg" alt="фото маски" />
+            <p>Маски для обличчя</p>
+          </li>
+          <li>
+            <img src="./images/image-2.jpg" alt="фото ін'єкцій" />
+            <p>Ін'єкції для обличчя</p>
+          </li>
+          <li>
+            <img src="./images/image-3.jpg" alt="очищення" />
+            <p>Очищення обличчя</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Як нас знайти</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.475609857351!2d30.772648475785797!3d50.506716783311816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0YPQuy4g0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60L4sIDUsINCR0YDQvtCy0LDRgNGLLCDQmtC40LXQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgMDc0MDA!5e0!3m2!1sru!2spl!4v1738081111658!5m2!1sru!2spl"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
+    </main>
+    <footer>
+      <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
+      <nav>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="#"></a>
+          <!--logo telehpon-->
+        </li>
+        <li>
+          <a href="#"></a>
+          <!--logo facebook-->
+        </li>
+        <li>
+          <a href="#"></a>
+          <!--logo instagram-->
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
