--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
       <nav>
+        <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
         <ul>
           <li><a href="#">Про нас</a></li>
           <li><a href="#">Чому ми</a></li>
@@ -34,11 +34,8 @@
     <main>
       <section>
         <p>Косметологічна клініка</p>
-        <h1>
-          <p>Beauty</p>
-          <p>zone</p>
-        </h1>
-        <button>Замовити дзвінок</button>
+        <h1>Beauty zone</h1>
+        <button type="button">Замовити дзвінок</button>
         <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
       </section>
       <section>
@@ -48,28 +45,33 @@
           за шкірою обличчя та тіла.
         </p>
         <p>
-          B <span lang="en">beauty zone</span> ми гарантуємо найвищі стандарти
+          B <span lang="en">Beauty Zone</span> ми гарантуємо найвищі стандарти
           якості та приємний сервіс. Наші косметологічні процедури та препарати
           допоможуть вам підтримувати свою красу та молодість. З нами краса
           назавжди!
         </p>
+        <img src="./images/face-do.jpg" alt="обличчя до" />
+        <img src="./images/face-after.jpg" alt="обличчя після" />
       </section>
       <section>
         <h2>Чому люди <span>обирають нас</span></h2>
         <ul>
           <li>
+            <img src="./images/game-icon-1.svg" alt="перша іконка" />
             <p>
               Всі наші косметологи мають вищу медичну освіту та стаж роботи від
               5 років
             </p>
           </li>
           <li>
+            <img src="./images/medicine-2.svg" alt="друга іконка" />
             <p>
               Використовуємо тільки професійне обладнання та косметику,
               перевірену часом
             </p>
           </li>
           <li>
+            <img src="./images/ph_crown-3.svg" alt="третя іконка" />
             <p>
               Наша мета - підкреслити переваги та приховати недоліки, а не
               переробити
@@ -78,7 +80,7 @@
         </ul>
       </section>
       <section>
-        <h2>Наші процедури</h2>
+        <h2>Наші <span>процедури</span></h2>
         <ul>
           <li>
             <img src="./images/image-1.jpg" alt="фото маски" />
@@ -105,11 +107,12 @@
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
+        <p>Запишіться <span>безкоштовно</span> та отримайте подарунок</p>
       </section>
     </main>
     <footer>
-      <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
       <nav>
+        <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
         <ul>
           <li><a href="#">Про нас</a></li>
           <li><a href="#">Чому ми</a></li>
@@ -117,20 +120,33 @@
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="#"></a>
-          <!--logo telehpon-->
-        </li>
-        <li>
-          <a href="#"></a>
-          <!--logo facebook-->
-        </li>
-        <li>
-          <a href="#"></a>
-          <!--logo instagram-->
-        </li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li>
+            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/4pVpQaEhNKgmjbS99" target="_blank"
+              >Україна, м. Київ, вул. Тараса Шевченка 5</a
+            >
+          </li>
+          <li>
+            <a href="#"></a>
+            <!--logo telehpon-->
+          </li>
+          <li>
+            <a href="#"></a>
+            <!--logo facebook-->
+          </li>
+          <li>
+            <a href="#"></a>
+            <!--logo instagram-->
+          </li>
+        </ul>
+        <a href="#" target="_blank">Політика конфіденційності</a>
+        <p>&copy; 2022 Дані захищені</p>
+      </address>
     </footer>
   </body>
 </html>
