commit change index html and images

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
+        <a href="./index.html"
+          ><img src="./images/logo.svg" alt="логотип салону"
+        /></a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#about-us-section">Про нас</a></li>
+          <li><a href="#why-us-section">Чому ми</a></li>
+          <li><a href="#our-procedures">Наші процедури</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -38,7 +40,7 @@
         <button type="button">Замовити дзвінок</button>
         <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
       </section>
-      <section>
+      <section id="about-us-section">
         <h2>Перевтілюйтесь в <span lang="en">Beauty zone!</span></h2>
         <p>
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
@@ -50,10 +52,10 @@
           допоможуть вам підтримувати свою красу та молодість. З нами краса
           назавжди!
         </p>
-        <img src="./images/face-do.jpg" alt="обличчя до" />
-        <img src="./images/face-after.jpg" alt="обличчя після" />
+        <img src="./images/face-after.jpg" alt="обличчя до" />
+        <img src="./images/face-do.jpg" alt="обличчя після" />
       </section>
-      <section>
+      <section id="why-us-section">
         <h2>Чому люди <span>обирають нас</span></h2>
         <ul>
           <li>
@@ -79,7 +81,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="our-procedures">
         <h2>Наші <span>процедури</span></h2>
         <ul>
           <li>
@@ -96,12 +98,12 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Як нас знайти</h2>
+      <section id="contacts-section">
+        <h2>Як нас <span>знайти</span></h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2537.475609857351!2d30.772648475785797!3d50.506716783311816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4d97de411b701%3A0x48116b28f7f00d94!2z0YPQuy4g0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60L4sIDUsINCR0YDQvtCy0LDRgNGLLCDQmtC40LXQstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCDQo9C60YDQsNC40L3QsCwgMDc0MDA!5e0!3m2!1sru!2spl!4v1738081111658!5m2!1sru!2spl"
-          width="600"
-          height="450"
+          width="605"
+          height="481"
           style="border: 0"
           allowfullscreen=""
           loading="lazy"
@@ -112,12 +114,14 @@
     </main>
     <footer>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="логотип салону" /></a>
+        <a href="./index.html"
+          ><img src="./images/logo.svg" alt="логотип салону"
+        /></a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#about-us-section">Про нас</a></li>
+          <li><a href="#why-us-section">Чому ми</a></li>
+          <li><a href="#our-procedures">Наші процедури</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
