styles and fonts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Beauty salon</title>
-    <!--fonts-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
     <!--Styles-->
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
@@ -54,18 +49,20 @@
           Перевтілюйтесь в
           <span class="accent-beauty" lang="en">Beauty zone!</span>
         </h2>
-        <p class="section-about">
-          Наша косметологічна клініка пропонує вам професійні послуги з догляду
-          за шкірою обличчя та тіла.
-        </p>
-        <p class="section-about">
-          B <span class="bold" lang="en">Beauty Zone</span> ми гарантуємо
-          найвищі стандарти якості та приємний сервіс. Наші косметологічні
-          процедури та препарати допоможуть вам підтримувати свою красу та
-          молодість. З нами краса назавжди!
-        </p>
-        <img src="./images/face-after.jpg" alt="обличчя до" />
-        <img src="./images/face-do.jpg" alt="обличчя після" />
+        <div class="section-about">
+          <p>
+            Наша косметологічна клініка пропонує вам професійні послуги з
+            догляду за шкірою обличчя та тіла.
+          </p>
+          <p>
+            B <span class="bold" lang="en">Beauty Zone</span> ми гарантуємо
+            найвищі стандарти якості та приємний сервіс. Наші косметологічні
+            процедури та препарати допоможуть вам підтримувати свою красу та
+            молодість. З нами краса назавжди!
+          </p>
+          <img src="./images/face-after.jpg" alt="обличчя до" />
+          <img src="./images/face-do.jpg" alt="обличчя після" />
+        </div>
       </section>
       <section id="why-us-section">
         <h2 class="section-title">
